--- a/display-a-meta-field-as-block/languages/display-a-meta-field-as-block.pot
+++ b/display-a-meta-field-as-block/languages/display-a-meta-field-as-block.pot
@@ -1,17 +1,17 @@
 # Copyright (C) 2024 Phi Phan
-# This file is distributed under the same license as the Meta Field Block plugin.
+# This file is distributed under the GPL-3.0.
 msgid ""
 msgstr ""
-"Project-Id-Version: Meta Field Block 1.2.1\n"
+"Project-Id-Version: Meta Field Block 1.3.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/meta-field-block\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-01-02T08:44:49+00:00\n"
+"POT-Creation-Date: 2024-11-16T00:50:57+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"X-Generator: WP-CLI 2.6.0\n"
+"X-Generator: WP-CLI 2.10.0\n"
 "X-Domain: meta-field-block\n"
 
 #. Plugin Name of the plugin
@@ -23,7 +23,7 @@ msgid "https://metafieldblock.com?utm_source=MFB&utm_campaign=MFB+visit+site&utm
 msgstr ""
 
 #. Description of the plugin
-msgid "Display a meta field or a custom field as a block on the front end, supporting ACF fields."
+msgid "Display a custom field as a block on the front end. It supports custom fields for posts, terms, and users. It supports ACF fields explicitly."
 msgstr ""
 
 #. Author of the plugin
